# TP_Algos

./: CMakeLists.txt  LICENSE  README.md  setup.py
TP_Algos/: LeastCostMethod.hpp  MODIMethod.hpp  NorthWestCorner.hpp  SteppingStoneMethod.hpp  VogelApproximationMethod.hpp  bindings.cpp  common.hpp  utils.hpp
tests/: test_Transportation.py
